update the about me

--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
             <div id="clock"></div>
         </div>
         <section class="profile-section">
-             <img src="images/selfpic.jpeg" alt=" Evelyne Mbithe" class="profile-pic">
+             <img src="images/african girl.jpg" alt=" Evelyne Mbithe" class="profile-pic">
              <div class="profile-content">
                 <h1>Hello</h1>
                 <h2> A bit about me</h2>
                 <p>
-                    My name is evelyne. I am a software developer based in Nairobi Kenya. I am proficient in Django, Python, javascript and currently learning react Js, Java and other languages. I look forward to working closely with you. 
+                    Hi, I’m Evelyne—a former hospitality professional turned software developer. I build web applications using Python, Django, HTML, CSS, and JavaScript, with a focus on clean code and security.
+
+                    I’m passionate about Django’s advanced features, database management, and web security, always learning and improving.
+                    
+                    Let’s connect—I’m always open to tech conversations and collaboration!
                 </p>
             
                 <div class="profile-buttons">
